--- a/config/locales/server.en.yml
+++ b/config/locales/server.en.yml
@@ -980,7 +980,8 @@ en:
     allow_uploaded_avatars: "Allow users to upload custom avatars."
     allow_animated_avatars: "Allow users to use animated gif avatars. WARNING: run the avatars:refresh rake task after changing this setting."
     allow_animated_thumbnails: "Generates animated thumbnails of animated gifs."
-    automatically_download_gravatars: "Download Gravatars for users upon account creation or email change."
+    enable_gravatar: "Enable Gravatar for user avatar."
+    automatically_refresh_gravatars: "Download and updated Gravatars automatically. Need enable_gravatar to take effect."
     digest_topics: "The maximum number of topics to display in the email digest."
     digest_min_excerpt_length: "Minimum post excerpt in the email digest, in characters."
     default_digest_email_frequency: "How often users receive digest emails by default. They can change this setting in their preferences."
