FEATURE: Add way to access all screened IP addresses through json
Expected client behavior:

1. Get the first 200 screened IP addresses
2. Take the match_count and id of the last entry
3. Request with ?after={match_count},{id}
4. Repeat steps 2-3 until less than 200 are returned

No UI is provided in this commit.

--- a/config/locales/server.en.yml
+++ b/config/locales/server.en.yml
@@ -55,6 +55,7 @@ en:
       too_long_validation: "is limited to %{max} characters; you entered %{length}."
       invalid_boolean: "Invalid boolean."
       taken: "has already been taken. (group names are case insensitive)"
+      bad_format: "Invalid input format."
     embed:
       load_from_remote: "There was an error loading that post."
 
