--- a/config/locales/server.en.yml
+++ b/config/locales/server.en.yml
@@ -998,6 +998,8 @@ en:
     dominating_topic_minimum_percent: "What percentage of posts a user has to make in a topic before being reminded about overly dominating a topic."
     suppress_uncategorized_badge: "Don't show the badge for uncategorized topics in topic lists."
 
+    suppress_slug: "Disable auto generated slug instead of default topic or 1-category"
+
     global_notice: "Display an URGENT, EMERGENCY global banner notice to all visitors, change to blank to hide it (HTML allowed)."
 
     disable_edit_notifications: "Disables edit notifications by the system user when 'download_remote_images_to_local' is active."
