--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -2370,7 +2370,9 @@ en:
         dismiss_tooltip: "Dismiss just new posts or stop tracking topics"
         also_dismiss_topics: "Stop tracking these topics so they never show up as unread for me again"
         dismiss_new: "Dismiss New"
-        dismiss_new_with_selected: "Dismiss New (%{count})"
+        dismiss_new_with_selected:
+          one: "Dismiss New (%{count})"
+          other: "Dismiss New (%{count})"
         toggle: "toggle bulk selection of topics"
         actions: "Bulk Actions"
         change_category: "Set Category"
