A11Y: Improve topic details toggle button label

--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -2471,7 +2471,8 @@ en:
       back_to_list: "Back to Topic List"
       options: "Topic Options"
       show_links: "show links within this topic"
-      toggle_information: "toggle topic details"
+      collapse_details: "collapse topic details"
+      expand_details: "expand topic details"
       read_more_in_category: "Want to read more? Browse other topics in %{catLink} or %{latestLink}."
       read_more: "Want to read more? %{catLink} or %{latestLink}."
       unread_indicator: "No member has read the last post of this topic yet."
