--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -646,6 +646,10 @@ en:
       total_rows:
         one: "%{count} user"
         other: "%{count} users"
+      edit_columns:
+        title: "Edit Directory Columns"
+        save: "Save"
+        reset_to_default: "Reset to default"
 
     group_histories:
       actions:
