Remove "ago" from `emails.incoming.missing_attachment`
This fixes https://discourse.crowdin.com/translate/f3230e7607a36bb0a2f97fd90605a44e/248/en-sv#46038

--- a/config/locales/server.en.yml
+++ b/config/locales/server.en.yml
@@ -111,7 +111,7 @@ en:
       maximum_staged_user_per_email_reached: "Reached maximum number of staged users created per email."
       no_subject: "(no subject)"
       no_body: "(no body)"
-      missing_attachment: "(Attachment %{filename} is missing) ago."
+      missing_attachment: "(Attachment %{filename} is missing)"
       continuing_old_discussion:
         one: "Continuing the discussion from [%{title}](%{url}), because it was created more than %{count} day ago."
         other: "Continuing the discussion from [%{title}](%{url}), because it was created more than %{count} days ago."
