Remove "/Posts" from `js.keyboard_shortcuts_help.application.dismiss_new_posts`
Because the shortcut doesn't do anything to posts anymore.
This fixes https://discourse.crowdin.com/translate/f3230e7607a36bb0a2f97fd90605a44e/246/en-de#43180

--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -3555,7 +3555,7 @@ en:
         show_incoming_updated_topics: "%{shortcut} Show updated topics"
         search: "%{shortcut} Search"
         help: "%{shortcut} Open keyboard help"
-        dismiss_new_posts: "%{shortcut} Dismiss New/Posts"
+        dismiss_new: "%{shortcut} Dismiss New"
         dismiss_topics: "%{shortcut} Dismiss Topics"
         log_out: "%{shortcut} Log Out"
       composing:
