FEATURE: Per-category default "slow mode"..
..as discussed here: https://meta.discourse.org/t/slow-mode-for-a-category/179574

--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -3234,6 +3234,7 @@ en:
       position_disabled: "Categories will be displayed in order of activity. To control the order of categories in lists, "
       position_disabled_click: 'enable the "fixed category positions" setting.'
       minimum_required_tags: "Minimum number of tags required in a topic:"
+      default_slow_mode: 'Enable "Slow Mode" for new topics in this category.'
       parent: "Parent Category"
       num_auto_bump_daily: "Number of open topics to automatically bump daily:"
       navigate_to_first_post_after_read: "Navigate to first post after topics are read"
