--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -2247,6 +2247,7 @@ en:
       hint: "(you can also drag & drop into the editor to upload)"
       hint_for_supported_browsers: "you can also drag and drop or paste images into the editor"
       uploading: "Uploading"
+      processing: "Processing Upload"
       select_file: "Select File"
       default_image_alt_text: image
       supported_formats: "supported formats"
