FEATURE: add multiselect user custom field
New user custom field similar to dropdown but allowing users to select multiple options.

--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -5093,6 +5093,7 @@ en:
           text: "Text Field"
           confirm: "Confirmation"
           dropdown: "Dropdown"
+          multiselect: "Multiselect"
 
       site_text:
         description: "You can customize any of the text on your forum. Please start by searching below:"
