--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -5095,6 +5095,7 @@ en:
           text: "Text Field"
           confirm: "Confirmation"
           dropdown: "Dropdown"
+          multiselect: "Multiselect"
 
       site_text:
         description: "You can customize any of the text on your forum. Please start by searching below:"
