--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -4699,6 +4699,8 @@ en:
             post_staff_note_create: "add staff note"
             post_staff_note_destroy: "destroy staff note"
             delete_group: "delete group"
+            add_watched_word: "add watched word"
+            delete_watched_word: "delete watched word"
         screened_emails:
           title: "Screened Emails"
           description: "When someone tries to create a new account, the following email addresses will be checked and the registration will be blocked, or some other action performed."
