FIX: don't allow category and tag tracking settings on staged users
Configuring staged users to watch categories and tags is a way to sign
them up to get many emails. These emails may be unwanted and get marked
as spam, hurting the site's email deliverability.
Users can opt-in to email notifications by logging on to their
account and configuring their own preferences.

If staff need to be able to configure these preferences on behalf of
staged users, the "allow changing staged user tracking" site setting
can be enabled. Default is to not allow it.

--- a/config/locales/server.en.yml
+++ b/config/locales/server.en.yml
@@ -2324,6 +2324,8 @@ en:
 
     create_revision_on_bulk_topic_moves: "Create revision for first posts when topics are moved into a new category in bulk."
 
+    allow_changing_staged_user_tracking: "Allow a staged user's category and tag notification preferences to be changed by an admin user."
+
     errors:
       invalid_email: "Invalid email address."
       invalid_username: "There's no user with that username."
