--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -3112,6 +3112,7 @@ en:
         name: "Name"
         name_placeholder: "What is this bookmark for?"
         set_reminder: "Remind me"
+        options: "Options"
         actions:
           delete_bookmark:
             name: "Delete bookmark"
