--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -5250,6 +5250,9 @@ en:
           upload_csv: Upload a CSV with either user emails or usernames
           aborted: Please upload a CSV containing either user emails or usernames
           success: Your CSV was received and users will receive their badge shortly.
+          success_with_unmatched_entries: |
+            Your CSV file has been received and %{count} users will receive their badge shortly. However, the following user(s) could not be found, and therefore won't receive the badge:
+            %{users}
           replace_owners: Remove the badge from previous owners
           grant_existing_holders: Grant additional badges to existing badge holders
 
