--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -5249,7 +5249,7 @@ en:
           perform: "Award Badge to Users"
           upload_csv: Upload a CSV with either user emails or usernames
           aborted: Please upload a CSV containing either user emails or usernames
-          success: Your CSV was received and users will receive their badge shortly.
+          success: Your CSV was received and %{count} users will receive their badge shortly.
           success_with_unmatched_entries: |
             Your CSV file has been received and %{count} users will receive their badge shortly. However, the following user(s) could not be found, and therefore won't receive the badge:
             %{users}
