don't use bootbox

--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -5250,9 +5250,7 @@ en:
           upload_csv: Upload a CSV with either user emails or usernames
           aborted: Please upload a CSV containing either user emails or usernames
           success: Your CSV was received and %{count} users will receive their badge shortly.
-          success_with_unmatched_entries: |
-            Your CSV file has been received and %{count} users will receive their badge shortly. However, the following user(s) could not be found, and therefore won't receive the badge:
-            %{users}
+          csv_has_unmatched_users: "The following entries are in the CSV file but they couldn't be matched to existing users, and therefore won't receive the badge:"
           replace_owners: Remove the badge from previous owners
           grant_existing_holders: Grant additional badges to existing badge holders
 
