A11Y: Add labels where needed (#13686)

--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -3113,6 +3113,7 @@ en:
         name: "Name"
         name_placeholder: "What is this bookmark for?"
         set_reminder: "Remind me"
+        options: "Options"
         actions:
           delete_bookmark:
             name: "Delete bookmark"
