--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -5251,6 +5251,7 @@ en:
           aborted: Please upload a CSV containing either user emails or usernames
           success: Your CSV was received and %{count} users will receive their badge shortly.
           csv_has_unmatched_users: "The following entries are in the CSV file but they couldn't be matched to existing users, and therefore won't receive the badge:"
+          csv_has_unmatched_users_truncated_list: "There were %{count} entries in the CSV file that couldn't be matched to existing users, and therefore won't receive the badge. Due to the large number of unmatched entries, only the first 100 are shown:"
           replace_owners: Remove the badge from previous owners
           grant_existing_holders: Grant additional badges to existing badge holders
 
